Fix: justify of cards on tablet

--- a/css-responsive/css-responsive_responsive-website/css/styles.css
+++ b/css-responsive/css-responsive_responsive-website/css/styles.css
@@ -158,7 +158,7 @@ body {
 
 .product-card {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 70%;
   height: 250px;
